# stellarallegiance

./: .csharpierignore  .csharpierrc.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .graphifyignore  ACCEPTANCE01.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  GLOSSARY.md  HANDOFF.md  NOTICE  QUICKSTART.md  README.md  audio-index.md  docker-compose.server.yml  docker-compose.yml  wivuullegiance.slnx
.PLAN/: 02-ENVIRONMENT-SETUP.md  04-REDUCERS.md  08-BUILD-ORDER.md  99-OPEN-QUESTIONS.md  AI.md  CLIENT-PIGS.md  COMBAT.md  CONFIG.md  LobbyRankingService.md  NATIVE-SIM.md  README.md  STAGE-1-2-PHASES.md  TechPathsFromMemory.md  base-author.md  code-review-sweep-2026-07-18.md  hardcoded-debug-settings-audit.md  sfx-gaps.md  tech-tree-README.md  tech-tree-sample.yaml  tech-tree-stock.yaml
.claude/: settings.json
.stdb-data/: metadata.toml
client/: .gitignore  README.md  default_bus_layout.tres  export_presets.cfg  project.godot  stellarallegiance.csproj  stellarallegiance.csproj.old.1  stellarallegiance.sln  wivuullegiance.csproj  wivuullegiance.sln
deploy/: sim-server.env.example  sim-server.service
docs/: DEPLOY.md  GLB-AND-HARDPOINT-FORMAT.md  PROTOTYPE-ARCHITECTURE.md
factions/: AllegianceModel.sln  (+2 more)
tools/base-col/: .gitignore  README.md  bake.py  base-col.generated.yaml  base-col.yaml  pyproject.toml
tools/collision-hull/: .gitignore  README.md  bake.py  base-col.yaml  mesh_only_view.py  pyproject.toml
tools/ship-gen/: .gitignore  Dockerfile  README.md  bake.py  build.sh  generate.py  glb.py  parts.py  pyproject.toml  ships.yaml
(+916 files in other folders)
