[project]
name = "base-col"
version = "0.1.0"
description = "Author + bake convex collision-proxy parts (COL_* nodes) into base.glb"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pygltflib>=1.16",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "trimesh>=4.0",
]

[tool.uv]
package = false
