[project]
name = "ship-gen"
version = "0.1.0"
description = "Procedural spaceship generator: modular parts (YAML) -> Godot-ready GLB with baked PBR textures + hardpoint nodes"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
    "pygltflib>=1.16",
    "pyyaml>=6.0",
]

[tool.uv]
package = false
